# serializer version: 1
# name: test_get_minute_forecast[v3.0][mock_service_response]
  dict({
    'weather.openweathermap': dict({
      'forecast': list([
        dict({
          'datetime': 1728672360,
          'precipitation': 0,
        }),
        dict({
          'datetime': 1728672420,
          'precipitation': 1.23,
        }),
        dict({
          'datetime': 1728672480,
          'precipitation': 4.5,
        }),
        dict({
          'datetime': 1728672540,
          'precipitation': 0,
        }),
      ]),
    }),
  })
# ---
# name: test_weather_states[current][weather.openweathermap-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'weather',
    'entity_category': None,
    'entity_id': 'weather.openweathermap',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'openweathermap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12.34-56.78',
    'unit_of_measurement': None,
  })
# ---
# name: test_weather_states[current][weather.openweathermap-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WeatherEntityStateAttribute.APPARENT_TEMPERATURE: 'apparent_temperature'>: 2.1,
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by OpenWeatherMap',
      <WeatherEntityStateAttribute.CLOUD_COVERAGE: 'cloud_coverage'>: 75,
      <WeatherEntityStateAttribute.DEW_POINT: 'dew_point'>: 4.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OpenWeatherMap',
      <WeatherEntityStateAttribute.HUMIDITY: 'humidity'>: 82,
      <WeatherEntityStateAttribute.PRECIPITATION_UNIT: 'precipitation_unit'>: <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
      <WeatherEntityStateAttribute.PRESSURE: 'pressure'>: 1000.0,
      <WeatherEntityStateAttribute.PRESSURE_UNIT: 'pressure_unit'>: <UnitOfPressure.HPA: 'hPa'>,
      <WeatherEntityStateAttribute.TEMPERATURE: 'temperature'>: 6.8,
      <WeatherEntityStateAttribute.TEMPERATURE_UNIT: 'temperature_unit'>: <UnitOfTemperature.CELSIUS: '°C'>,
      <WeatherEntityStateAttribute.VISIBILITY: 'visibility'>: 10.0,
      <WeatherEntityStateAttribute.VISIBILITY_UNIT: 'visibility_unit'>: <UnitOfLength.KILOMETERS: 'km'>,
      <WeatherEntityStateAttribute.WIND_BEARING: 'wind_bearing'>: 199,
      <WeatherEntityStateAttribute.WIND_GUST_SPEED: 'wind_gust_speed'>: 42.52,
      <WeatherEntityStateAttribute.WIND_SPEED: 'wind_speed'>: 35.39,
      <WeatherEntityStateAttribute.WIND_SPEED_UNIT: 'wind_speed_unit'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'weather.openweathermap',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cloudy',
  })
# ---
# name: test_weather_states[forecast][weather.openweathermap-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'weather',
    'entity_category': None,
    'entity_id': 'weather.openweathermap',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'openweathermap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WeatherEntityFeature: 2>,
    'translation_key': None,
    'unique_id': '12.34-56.78',
    'unit_of_measurement': None,
  })
# ---
# name: test_weather_states[forecast][weather.openweathermap-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WeatherEntityStateAttribute.APPARENT_TEMPERATURE: 'apparent_temperature'>: 2.1,
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by OpenWeatherMap',
      <WeatherEntityStateAttribute.CLOUD_COVERAGE: 'cloud_coverage'>: 75,
      <WeatherEntityStateAttribute.DEW_POINT: 'dew_point'>: 4.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OpenWeatherMap',
      <WeatherEntityStateAttribute.HUMIDITY: 'humidity'>: 82,
      <WeatherEntityStateAttribute.PRECIPITATION_UNIT: 'precipitation_unit'>: <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
      <WeatherEntityStateAttribute.PRESSURE: 'pressure'>: 1000.0,
      <WeatherEntityStateAttribute.PRESSURE_UNIT: 'pressure_unit'>: <UnitOfPressure.HPA: 'hPa'>,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WeatherEntityFeature: 2>,
      <WeatherEntityStateAttribute.TEMPERATURE: 'temperature'>: 6.8,
      <WeatherEntityStateAttribute.TEMPERATURE_UNIT: 'temperature_unit'>: <UnitOfTemperature.CELSIUS: '°C'>,
      <WeatherEntityStateAttribute.VISIBILITY: 'visibility'>: 10.0,
      <WeatherEntityStateAttribute.VISIBILITY_UNIT: 'visibility_unit'>: <UnitOfLength.KILOMETERS: 'km'>,
      <WeatherEntityStateAttribute.WIND_BEARING: 'wind_bearing'>: 199,
      <WeatherEntityStateAttribute.WIND_GUST_SPEED: 'wind_gust_speed'>: 42.52,
      <WeatherEntityStateAttribute.WIND_SPEED: 'wind_speed'>: 35.39,
      <WeatherEntityStateAttribute.WIND_SPEED_UNIT: 'wind_speed_unit'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'weather.openweathermap',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cloudy',
  })
# ---
# name: test_weather_states[v3.0][weather.openweathermap-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'weather',
    'entity_category': None,
    'entity_id': 'weather.openweathermap',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'openweathermap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WeatherEntityFeature: 3>,
    'translation_key': None,
    'unique_id': '12.34-56.78',
    'unit_of_measurement': None,
  })
# ---
# name: test_weather_states[v3.0][weather.openweathermap-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WeatherEntityStateAttribute.APPARENT_TEMPERATURE: 'apparent_temperature'>: 2.1,
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by OpenWeatherMap',
      <WeatherEntityStateAttribute.CLOUD_COVERAGE: 'cloud_coverage'>: 75,
      <WeatherEntityStateAttribute.DEW_POINT: 'dew_point'>: 4.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OpenWeatherMap',
      <WeatherEntityStateAttribute.HUMIDITY: 'humidity'>: 82,
      <WeatherEntityStateAttribute.PRECIPITATION_UNIT: 'precipitation_unit'>: <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
      <WeatherEntityStateAttribute.PRESSURE: 'pressure'>: 1000.0,
      <WeatherEntityStateAttribute.PRESSURE_UNIT: 'pressure_unit'>: <UnitOfPressure.HPA: 'hPa'>,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WeatherEntityFeature: 3>,
      <WeatherEntityStateAttribute.TEMPERATURE: 'temperature'>: 6.8,
      <WeatherEntityStateAttribute.TEMPERATURE_UNIT: 'temperature_unit'>: <UnitOfTemperature.CELSIUS: '°C'>,
      <WeatherEntityStateAttribute.VISIBILITY: 'visibility'>: 10.0,
      <WeatherEntityStateAttribute.VISIBILITY_UNIT: 'visibility_unit'>: <UnitOfLength.KILOMETERS: 'km'>,
      <WeatherEntityStateAttribute.WIND_BEARING: 'wind_bearing'>: 199,
      <WeatherEntityStateAttribute.WIND_GUST_SPEED: 'wind_gust_speed'>: 42.52,
      <WeatherEntityStateAttribute.WIND_SPEED: 'wind_speed'>: 35.39,
      <WeatherEntityStateAttribute.WIND_SPEED_UNIT: 'wind_speed_unit'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'weather.openweathermap',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cloudy',
  })
# ---
